--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,9 @@
 plugins {
   id 'com.android.application'
   id 'kotlin-android'
+  id 'kotlin-android-extensions'
+  id 'kotlin-kapt'
+  id 'dagger.hilt.android.plugin'
 }
 
 android {
@@ -39,7 +42,26 @@ dependencies {
   implementation 'androidx.appcompat:appcompat:1.2.0'
   implementation 'com.google.android.material:material:1.2.1'
   implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-  testImplementation 'junit:junit:4.+'
+  testImplementation 'junit:junit:4.13.1'
   androidTestImplementation 'androidx.test.ext:junit:1.1.2'
   androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+  implementation 'com.google.android.material:material:1.2.1'
+
+  //Reactive
+  implementation "io.reactivex.rxjava2:rxjava:2.2.17"
+  implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+  implementation 'com.squareup.retrofit2:adapter-rxjava2:2.8.1'
+
+  //Network
+  implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+  implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+  implementation 'com.squareup.okhttp3:okhttp:4.9.0'
+  implementation 'com.squareup.okhttp3:logging-interceptor:4.9.0'
+
+  //Hil dagger dependency
+  implementation "com.google.dagger:hilt-android:$hilt_version"
+  kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
+  implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha02"
+  kapt "androidx.hilt:hilt-compiler:1.0.0-alpha02"
+  implementation "androidx.fragment:fragment-ktx:1.2.5" // to be able to use activityViewModels
 }
